<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		tools:context=".ui.RegistrationFragment">


		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/first_name_text_input_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="50dp"
			android:hint="@string/first_name"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/first_name_text_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/last_name_text_input_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="20dp"
			android:hint="@string/last_name"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/last_name_text_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/date_picker_input_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="20dp"
			android:hint="@string/pick_date"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/date_picker_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>


		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/password_text_input_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="20dp"
			android:hint="@string/enter_password"
			app:endIconMode="password_toggle"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/re_password_text_input_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="20dp"
			android:hint="@string/repeat_password"
			app:endIconMode="password_toggle"
			app:errorEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/re_password_input_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/sign_up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:text="@string/sign_up" />

	</LinearLayout>
</ScrollView>